Feat: Detekt and Test Plugins, (Including Create Detekt Baseline) (#136)
* feat: integrate build logic submodule

Integrates the `gruntsoftware-build-logic` Git submodule into the project.

This change includes:
- Adding the submodule to `.gitmodules`.
- Including the build logic in `settings.gradle.kts`.
- Applying build logic plugins (`test` and `detekt`) in `app/build.gradle.kts`.

* chore(detekt): apply baseline rules

* chore: Remove ktlint from project

This commit removes the ktlint configuration and associated tasks from the `app/build.gradle.kts` file. It also removes the `pinterest-ktlint` dependency from the `gradle/libs.versions.toml` file.